<resources>
    <string name="app_name">Kaidelivery</string>
    <string name="retry">Retry</string>
    <string name="post_error">An error occured while loading the posts</string>
    <string name="unknown_restype">No Data</string>
    <string name="kilometers_alias">km.</string>
    <string name="meters_alias">m.</string>
    <string name="noimg">noimg.png</string>
    <string name="nofood">No Data</string>
    <string name="allfood">Restaurants</string>
    <string name="continuebutton">next</string>
    <string name="orderheader">Details</string>
    <string name="endpointdetails">More informations</string>
    <string name="orderdetails">Details</string>
    <string name="foodallcaltext">Subtotal</string>
    <string name="deliverycaltext">Delivery</string>
    <string name="calalltext">Total</string>
    <string name="title_activity_maps">Map</string>
    <string name="loadinglocation">Loading...</string>
    <string name="choosethisplace">Pick here</string>
    <string name="sendorder">Order Now</string>
    <string name="sendotpbutton">SEND OTP</string>
    <string name="hinttelephone">Please input telephone number</string>
    <string name="accept">Accept</string>
    <string name="pleaseinputotp">Please input your OTP</string>
    <string name="pleaseinputtelephoneagain">Pleast input corrent number</string>
    <string name="retryth">Retry</string>
    <string name="somethinghaswrong">Something has wrong</string>
    <string name="wrongotp">Wrong OTP!</string>
    <string name="sendotpsuccess">Doned, we trying investigate your otp</string>
    <string name="laststeporder">Doned</string>
    <string name="minminute">Limit Minute</string>
    <string name="hintminminute">Click for accept</string>
    <string name="hintminprice">Input min price (Optional)</string>

    <string name="facebook_app_id">2500531690173363</string>
    <string name="fb_login_protocol_scheme">fb2500531690173363</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="orderwaittextone">รอการตอบรับ .</string>
    <string name="orderwaittexttwo">รอการตอบรับ ..</string>
    <string name="orderwaittextthree">รอการตอบรับ ...</string>

    <string name="senderid">99509912056</string>

    <string name="base64string">Kaidelivery</string>

    <string name="total">Total</string>
    <string name="totalcustom">Total(custom)</string>

    <!-- side left nav -->
    <string name="left_restaurant">Profile</string>
    <string name="left_password">Change Password</string>
    <string name="left_logout">Log out</string>

    <string name="btm_restaurants">Restaurants</string>
    <string name="btm_travking">Tracking</string>
    <string name="btm_history">History</string>
</resources>
