<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activityotp_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.food.OTPActivity">
    
    <ProgressBar
            android:id="@+id/loadingOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_centerInParent="true"
            android:visibility="gone"
    />
    
    <LinearLayout
            android:id="@+id/containerTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
    >
        
        <EditText
                android:id="@+id/edtTelephone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/hinttelephone"
                android:maxLength="10"
        />
        
        <Button
                android:id="@+id/btnRequestOTP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sendotpbutton"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center_vertical"
                android:textColor="#FFF"
                android:background="@drawable/btn_accept"
        />
        
    </LinearLayout>
    
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/containerTelephone"
    >
    
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pleaseinputotp"
                android:layout_marginTop="72dp"
                android:textStyle="bold"
        />
    
        <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="15dp"
                android:itemBackground="@color/colorPrimary"
                android:textColor="@android:color/white"
                app:itemCount="6"
                app:lineColor="@color/colorPrimary"
                app:viewType="line"
        />
        
    </LinearLayout>
    
    
</RelativeLayout>