<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.food.ConfirmFoodActivity">
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
        
            <Button
                    android:id="@+id/btnSearchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/icon_location"
                    android:background="@drawable/btn_borderbottom"
                    android:drawablePadding="15dp"
                    android:padding="10dp"
            />
        
            <EditText
                    android:id="@+id/edtEndpointDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:hint="@string/endpointdetails"/>
        
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orderdetails"
                    android:textSize="20dp"
                    android:textColor="@color/colorButtonContinueOrder"
            />
        
            <EditText
                    android:id="@+id/edtOrderDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:gravity="top|left"
                    android:scrollbars="vertical"
                    android:hint="@string/orderdetails"
            />
        
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
            
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="เมนูที่สั่ง"
                        android:textSize="18sp"
                />
            
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/orderList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">
            
            
                </androidx.recyclerview.widget.RecyclerView>
            
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:paddingRight="5dp">
                
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/foodallcaltext"
                            android:textStyle="bold"
                            android:textSize="12dp"
                    />
                
                    <TextView
                            android:id="@+id/txtFoodAllCal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="10dp"
                            android:paddingRight="15dp"
                    />
            
                </LinearLayout>
            
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:paddingRight="5dp">
                
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deliverycaltext"
                            android:textStyle="bold"
                            android:textSize="12dp"
                    />
                
                    <TextView
                            android:id="@+id/txtDeliveryCal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="10dp"
                            android:paddingRight="15dp"
                    />
            
                </LinearLayout>
            
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">
                
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calalltext"
                            android:textStyle="bold"
                            android:textSize="15dp"
                            android:textColor="@color/colorButtonContinueOrder"
                    />
                
                    <TextView
                            android:id="@+id/txtCalFoodAndDelivery"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="10dp"
                            android:paddingRight="15dp"
                    />
            
                </LinearLayout>
            
                <Button
                        android:id="@+id/btConfirmOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/continue_arrow"
                        android:gravity="center"
                        android:text="@string/sendorder"
                        android:textColor="#FFF"
                        android:background="@drawable/btn_continueorder"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginBottom="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
        
            </LinearLayout>
    
        </LinearLayout>
        
        <ProgressBar
                android:id="@+id/loadingConfirmOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        
    </RelativeLayout>
    
</ScrollView>